# react-native-nitro-state

./: CONTRIBUTING.md  LICENSE  NitroState.podspec  README.md  nitro.json  package.json  tsconfig.json
.claude/: claude.md
.github/ISSUE_TEMPLATE/: config.yml
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitrostate/: NitroState.kt  NitroStatePackage.kt
cpp/: AtomCore.cpp  AtomCore.hpp  BatchManager.cpp  BatchManager.hpp  CMakeLists.txt  ComputedCore.cpp  ComputedCore.hpp  HybridNitroState.cpp  HybridNitroState.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/nitrostate/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/NitroStateExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroStateExample.xcodeproj/: project.pbxproj
example/ios/NitroStateExample.xcodeproj/xcshareddata/xcschemes/: NitroStateExample.xcscheme
example/ios/NitroStateExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: NitroState.swift
src/: NitroState.nitro.ts  index.tsx
src/core/: atom.ts  batch.ts  index.ts  instance.ts
src/hooks/: index.ts  useAtom.ts
src/specs/: NitroState.nitro.ts
src/types/: index.ts
